--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -491,7 +491,7 @@ This allows users to import the component without hosting it themselves.
 Web authors can also host Speakur's files on their own server if desired.
 This makes it very easy to deploy\index{deployment} Speakur in a wide variety of system architectures.
 Speakur\index{Speakur} is provided in two versions; 
-the `development' version where each resource is provided as a separate, raw, non-minified file,
+the `development' version where each resource is provided as a separate, raw, non-minified\index{minify} file,
 and a `production' or Vulcanized\index{Vulcanize} version where all necessary resources are combined into a single file for faster loading speeds~\cite{polymercontributors2015-a}. 
 
 In a relatively small application like Speakur the difference is not huge, especially on Google Chrome\index{Google!Google Chrome} which already supports Web Components natively,
