--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -60,7 +60,7 @@ out of Lego-like reusable building blocks seemed like a distant dream at best.
 The introduction of the 
 JavaScript\index{JavaScript|textbf}\footnote{JavaScript, also rendered as Javascript or JS, 
 has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized as ECMAScript (ES)\index{ECMAScript (JavaScript)}.}
-(JS) programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
+(JS) programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not previously possible~\cite{w3ccontributors2012}.
 Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from anywhere with an Internet connection.
 Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts did not step on each other's toes, else disaster frequently ensued. 
 Each component or sub-system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM\index{DOM} and HTML~\cite{ihrig2012}.
@@ -209,6 +209,6 @@ The Speakur\index{Speakur} source code and component documentation can be found 
 
 \tcode{\url{https://github.com/Preston-Landers/speakur-discussion}}
 
-Demonstrations of several web pages which show off embedded Speakur discussions are available at the following location~\cite{landers2015-c}:
+A demonstration web page that shows off a live embedded Speakur discussion is available at the following location~\cite{landers2015-c}:
 
 \tcode{\url{https://preston-landers.github.io/speakur-discussion/components/speakur-discussion/demo.html}}
