--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -380,7 +380,7 @@ I would like to thank Bill Balcezak for strongly encouraging and facilitating th
 I would also like to thank Curt Finch, John Maddalozzo and everyone else at Journyx for their patience, understanding and encouragement.
 
 I would also like to thank my supervisor, Dr. Adnan Aziz, 
-for his enthusiasm, invaluable feedback, wisdom, and for teaching one of best classes I've ever taken.
+for his enthusiasm and wisdom, his invaluable feedback, and for teaching one of best classes I've ever taken.
 In addition I would like to thank Dr. Christine Julien, Mr. Bill Bard, Dr. Kathleen Barber, and all of the other excellent instructors in the CLEE program.
 Without this amazing program and everyone mentioned above, I would not be who I am today.
 \end{acknowledgments}
